[tool.poetry]
name = "libterraform"
version = "0.4.0"
description = "Python binding for Terraform."
authors = ["Prodesire <wangbinxin001@126.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Prodesire/py-libterraform"
repository = "https://github.com/Prodesire/py-libterraform"
keywords = ["libterraform", "terraform"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows"
]
packages = [
    { include = "libterraform/*" },
]
include = ["libterraform/libterraform.so", "libterraform/libterraform.dll"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
